# components

./: BUILD.bazel  package.json
.github/workflows/: dev-infra.yml  lock-closed.yml
goldens/: BUILD.bazel
guides/: BUILD.bazel
integration/: BUILD.bazel
integration/harness-e2e-cli/: BUILD.bazel  package.json
integration/linker/: BUILD.bazel
integration/mdc-migration/: BUILD.bazel
integration/ng-add/: BUILD.bazel  package.json
integration/ng-add-standalone/: BUILD.bazel  package.json
integration/size-test/: BUILD.bazel
integration/ts-compat/: BUILD.bazel
integration/yarn-pnp-compat/: BUILD.bazel  package.json
src/: BUILD.bazel
src/cdk/: BUILD.bazel  package.json
src/cdk-experimental/: BUILD.bazel  package.json
src/components-examples/: BUILD.bazel  package.json
src/dev-app/: BUILD.bazel
src/e2e-app/: BUILD.bazel
src/google-maps/: BUILD.bazel  package.json
src/material/: BUILD.bazel
src/material-date-fns-adapter/: BUILD.bazel  package.json
src/material-experimental/: BUILD.bazel
src/material-luxon-adapter/: BUILD.bazel  package.json
src/material-moment-adapter/: BUILD.bazel  package.json
src/universal-app/: BUILD.bazel
src/youtube-player/: BUILD.bazel  package.json
test/: BUILD.bazel
tools/: BUILD.bazel
tools/angular/: BUILD.bazel
tools/axe-protractor/: BUILD.bazel
tools/dgeni/: BUILD.bazel
tools/example-module/: BUILD.bazel
tools/highlight-files/: BUILD.bazel
tools/markdown-to-html/: BUILD.bazel
tools/mdc-deps/: BUILD.bazel
tools/package-docs-content/: BUILD.bazel
tools/postcss/: BUILD.bazel
(+5 files in other folders)
